tests/e2e/corpus/err_undefined_property.err
[line 3] runtime error: undefined property 'missing'
