tests/e2e/corpus/err_undefined_property.lum
class Empty {}
var e = Empty();
print e.missing;
